legend-pure-parser/examples/errors/04_unknown_keyword.pure
###Pure

// ERROR: Completely unrecognized element keyword
Clazz model::errors::Typo
{
  name: String[1];
}
